# GLIS

./: .gdb_history  .gitmodules  CMakeLists.txt  Makefile  PS_PROCESSES  README.md  files_list_LSOF
app/src/main/jni/: CMakeLists.txt  GLA.h  GLIS.h  GLIS_COMMANDS.h  GLIS_IPC.h  MYPRIVATEAPP.cpp  ashmem.cpp  ashmem.h  boost_vs_serializer.cpp  compositor.cpp  compositor.h  header.h  jni2.cpp  jniapi.cpp  libsu.h  log_main.h  logger.h  possible-deadlock.txt  serializer  serializer.cpp  serializer.h  server.h  server_core.h  shm.cpp  shm.h
app/src/main/jni/Boost-for-Android/: CMakeLists.txt
app/src/main/jni/GLIS/: CMakeLists.txt  Makefile
app/src/main/jni/GLIS/compositor_clients/: DefaultFramebuffer.cpp  MYPRIVATEAPP.cpp  MovingWindows.cpp  MovingWindowsB.cpp  OffScreenFramebuffer.cpp  Texture.cpp  compositor_start_drawing.cpp
app/src/main/jni/GLIS/debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile
app/src/main/jni/GLIS/debug_BUILD/: CMakeCache.txt  Makefile  cmake_install.cmake  testBuilder_executables_DefaultFramebuffer  testBuilder_executables_MovingWindows  testBuilder_executables_MovingWindowsB  testBuilder_executables_OffScreenFramebuffer  testBuilder_executables_X11  testBuilder_executables_X11_3  testBuilder_executables_compositor  testBuilder_executables_compositor_start_drawing
app/src/main/jni/GLIS/debug_EXECUTABLE/: .gdb_history  DefaultFramebuffer  MYPRIVATEAPP  MovingWindows  MovingWindowsB  OffScreenFramebuffer  Texture  X11  X11_2  X11_3  compositor  compositor_start_drawing  compositor_stop_drawing  shm  test
app/src/main/jni/GLIS/examples/: X11.cpp  X11_2.cpp  X11_3.cpp  compositor.cpp  compositor_shaders.hpp  wayland.cpp
app/src/main/jni/GLIS/include/glis/: glis.hpp
app/src/main/jni/GLIS/testBuilder/: CMakeLists.txt
app/src/main/jni/SysV_api/: SysV.cpp  SysV.hpp  a.out  libsu  main.cpp  test_SysV_C++.sh
app/src/main/jni/WINAPI/: CMakeLists.txt
app/src/main/jni/compositor_examples/: DefaultFramebuffer.cpp  LowMemoryKillerTest.cpp  MYPRIVATEAPP.cpp  MovingWindows.cpp  MovingWindowsB.cpp  compositor_start_drawing.cpp  compositor_stop_drawing.cpp  shm.cpp
app/src/main/jni/executables/: MYPRIVATEAPP
app/src/main/jni/executables/Arch/arm64-v8a/: DefaultFramebuffer  LowMemoryKillerTest  MYPRIVATEAPP  MovingWindows  MovingWindowsB  OffScreenFramebuffer  Texture  X11  X11_2  X11_3  compositor  compositor_start_drawing  compositor_stop_drawing  shm  shm_demo  wayland
app/src/main/jni/executables/Arch/armeabi-v7a/: DefaultFramebuffer  LowMemoryKillerTest  MYPRIVATEAPP  MovingWindows  MovingWindowsB  OffScreenFramebuffer  Texture  X11  X11_2  X11_3  compositor  compositor_start_drawing  compositor_stop_drawing  shm  shm_demo  wayland
app/src/main/jni/executables/Arch/x86/: DefaultFramebuffer  LowMemoryKillerTest  MYPRIVATEAPP  MovingWindows  MovingWindowsB  OffScreenFramebuffer  Texture  X11  X11_2  X11_3  compositor  compositor_start_drawing  compositor_stop_drawing  shm  shm_demo  wayland
app/src/main/jni/executables/Arch/x86_64/: DefaultFramebuffer  LowMemoryKillerTest  MYPRIVATEAPP  MovingWindows  MovingWindowsB  OffScreenFramebuffer  Texture  X11  X11_2  X11_3  compositor  compositor_start_drawing  shm  shm_demo  (+2 more)
app/src/main/jni/libsu/: daemon  daemon.c  libsu  libsu.c  libsu.cpp  libsu.h  main.c  test_C++.sh  test_C.sh
app/src/main/jni/libsu/dotgit/: COMMIT_EDITMSG  ORIG_HEAD  config  index
app/src/main/jni/libsu/dotgot/: index
dependancies/font/: AnyOpt  CMakeLists.txt  Makefile  WINAPI  main.cpp  testBuilder
dependancies/font/debug_BUILD/: CMakeCache.txt  Makefile  cmake_install.cmake  testBuilder_executables_f
dependancies/font/debug_BUILD/AnyOpt/: Makefile  cmake_install.cmake
dependancies/font/debug_BUILD/AnyOpt/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dependancies/font/debug_BUILD/AnyOpt/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dependancies/font/debug_BUILD/AnyOpt/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dependancies/font/debug_BUILD/AnyOpt/tests/: Makefile  cmake_install.cmake  testBuilder_executables_AnyOpt_Tests
dependancies/font/debug_BUILD/WINAPI/: Makefile  cmake_install.cmake
dependancies/font/debug_BUILD/testBuilder/: Makefile
dependancies/font/debug_EXECUTABLE/: AnyOpt_Tests  f
dependancies/font/debug_asan_BUILD/: CMakeCache.txt  Makefile  cmake_install.cmake  testBuilder_executables_f
dependancies/font/debug_asan_BUILD/WINAPI/: Makefile  cmake_install.cmake
dependancies/font/debug_asan_BUILD/testBuilder/: Makefile  cmake_install.cmake
dependancies/font/debug_asan_EXECUTABLE/: f
dependancies/font/release_BUILD/: CMakeCache.txt  Makefile  cmake_install.cmake  testBuilder_executables_f
dependancies/font/release_BUILD/WINAPI/: Makefile  cmake_install.cmake
dependancies/font/release_BUILD/testBuilder/: Makefile  cmake_install.cmake
dependancies/pipeline/: CMakeLists.txt  README.md  build_hardware.sh  build_pipeline.sh
dependancies/pipeline/debug_BUILD/: CMakeCache.txt  Makefile  cmake_install.cmake
dependancies/pipeline/debug_BUILD/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dependancies/pipeline/debug_BUILD/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dependancies/pipeline/debug_BUILD/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dependancies/pipeline/debug_BUILD/src/: Makefile  cmake_install.cmake
dependancies/pipeline/debug_BUILD/src/hardware/: Makefile  cmake_install.cmake  testBuilder_executables_hardware_test_01
dependancies/pipeline/debug_BUILD/testBuilder/: Makefile  cmake_install.cmake
dependancies/pipeline/include/: AnyOpt.h
dependancies/pipeline/src/: CMakeLists.txt
dependancies/pipeline/src/hardware/: CMakeLists.txt  hardware.cpp
dependancies/pipeline/src/pipeline/: CMakeLists.txt  pipeline_v2.cpp  pipeline_v3.cpp  pipeline_v3_b.cpp  pipeline_v3_f.cpp  pipeline_v3_g.cpp
dependancies/pipeline/tests/: AnyOpt_Tests.cpp  example.cpp
testBuilder/: CMakeLists.txt
(+754 files in other folders)
